common/infrastructure/traefik/extensions/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-internal-muehlbachler-io
    external-dns.alpha.kubernetes.io/provider: internal
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: &host traefik.${LOCAL_INTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  tls:
    - secretName: traefik-dashboard-tls-cert
      hosts:
        - *host
